fixed close btn tag overlapping

--- a/app/assets/stylesheets/components/_card_item.scss
+++ b/app/assets/stylesheets/components/_card_item.scss
@@ -159,8 +159,9 @@ h5 {
   }
 }
 
-.close-btn {
+.close-x {
   right: 0 !important;
+  top: 4px !important;
   color: $dark-gray !important;
   margin: 0 !important;
   &:hover {
